system/tailscale-operator/resources/pix-smb400-gateway.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pix-smb400-gateway

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pix-smb400-gateway
  template:
    metadata:
      labels:
        app: pix-smb400-gateway
    spec:
      containers:
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:v1.102.4
          ports:
            - name: tcp
              containerPort: 40772
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: state
              mountPath: /var/lib/tailscale
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: pix-smb400-gateway-state
